# Terraria-Clone

./: CMakeLists.txt  README.md
engine/core/: Vec2.h
engine/ecs/: ComponentStorage.h  Entity.h  EntityManager.h
engine/rendering/: LightingSystem.cpp  LightingSystem.h
engine/world/: BiomeManager.cpp  BiomeManager.h  Chunk.cpp  Chunk.h  ChunksManager.cpp  ChunksManager.h  Pathfinding.cpp  Pathfinding.h  PerlinNoise.h  tile.cpp  tile.h
game/: Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  Game.cpp  Game.h  Item.h  SoundManager.cpp  SoundManager.h  TileItem.h  Weapon.h  WeaponItem.h  ZombieAI.h  player.cpp  player.h  zombie.h
game/Components/: AIComponent.h  AirAIComponent.h  AnimationComponent.h  CollisionComponent.h  FactionComponent.h  HealthComponent.h  InputComponent.h  InventoryComponent.h  MovementComponent.h  PhysicsComponent.h  RenderComponent.h  TransformComponent.h  WeaponComponent.h
game/Systems/: AISystem.cpp  AISystem.h  CombatSystem.cpp  CombatSystem.h  EnemySpawnerSystem.cpp  EnemySpawnerSystem.h  HealthSystem.cpp  HealthSystem.h  InventorySystem.cpp  InventorySystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  ZombieAI.h
include/: Chunk.h  ChunksManager.h  Entity.h  Game.h  LightingSystem.h  PerlinNoise.h  ShortSword.h  TileItem.h  Vec2.h  Weapon.h  WeaponItem.h  ZombieAI.h  player.h  tile.h  zombie.h
src/: Chunk.cpp  ChunksManager.cpp  Entity.cpp  Game.cpp  LightingSystem.cpp  PerlinNoise.cpp  ShortSword.cpp  Vec2.cpp  ZombieAI.cpp  main.cpp  player.cpp  tile.cpp  zombie.cpp
